# csc-299-project

./: README.md  Summary.md  ai.projectDisc_1.md  test_tasks.py  video.txt
final_project/src/: cli.py  tasks.py
final_project/src/final_project/: Summary.md  ai_client.py  tasks.py
final_project/src/final_project/final_project/src/final_project/final_project/src/final_project/: cli.py
final_project/tests/: test_tasks.py
task1/: README.md  main.py  task.json  tasks.json
task2/: main.py  tasks.json
task3/: README.md  main.py  tasks.json
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_tasks.py
tasks4/: main.py  pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks4/tests/: test_tasks4.py
tasks5/: pyproject.toml
tasks5/src/tasks5/: main.py
tasks5/src/tasks5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tasks5/tasks4/: pyproject.toml
tasks5/tasks4/src/tasks4/: main.py
tasks5/tasks4/src/tasks4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
