[project]
name = "tasks3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alan", email = "alanbadillo92@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.0",
]

[project.scripts]
tasks3 = "tasks3:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
