[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks5"
version = "0.1.0"
description = "Task 5 project"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tasks5 = "tasks5.main:main"

