[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks4"
version = "0.1.0"
description = "Task 4 project - OpenAI Chat Completions experiment"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tasks4 = "tasks4.main:main"

